package edu.bascula.dominio;

public enum EstadoLectura {
	
	PENDIENTE,
	REVISADA,
	CANCELADA

}
